<resources>
    <string name="app_name">Baby Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_onboarding1">Track Your Baby\'s Activities with Ease</string>
    <string name="description_onboarding1">Get started with tracking your baby\'s \nfeedings, diaper changes, sleep patterns,\n and more…</string>
    <string name="next">Next</string>
    <string name="title_onboarding2">Stay Connected with Caregivers</string>
    <string name="description_onboarding2">Share access to your baby\'s tracker with\n family members, babysitters, or healthcare\n providers </string>
    <string name="home">Home</string>
    <string name="feeding">Feeding</string>
    <string name="sleep">Sleep</string>
    <string name="symptoms">Symptoms</string>
    <string name="settings">Settings</string>
    <string name="get_premium">Get Premium!</string>
    <string name="rate_us">Rate Us</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>

    <string name="runny_nose">Runny Nose</string>
    <string name="heartburn">Heartburn</string>
    <string name="no_appetite">No Appetite</string>
    <string name="rush">Rush</string>
    <string name="low_energy">Low Energy</string>
    <string name="nausea">Nausea</string>
    <string name="cough">Cough</string>
    <string name="fever">Fever</string>
    <string name="calender">Calender</string>
    <string name="separator">-</string>
    <string name="feedingalll">Feeding</string>
    <string name="share_the_care">Share the care</string>
    <string name="all_in_one_baby_tracker">All-in-one baby tracker</string>
    <string name="watch_your_baby_s_growth">Watch your baby\'s growth</string>
    <string name="annual">Annual</string>
    <string name="_30">$30</string>
    <string name="start">Start</string>
    <string name="privacy_policy_innapp">Privacy Policy</string>
    <string name="restore_purchase_inapp">Restore Purchase</string>
    <string name="terms_of_use_inapp">Terms of Use</string>
    <string name="note">Note</string>
    <string name="woke_up">Woke Up</string>
    <string name="fell_sleep">Fell Sleep</string>
    <string name="time">Time</string>
    <string name="symptoms_tv">Symptoms</string>
    <string name="time_template">time: %1$s</string>
    <string name="amount_template">amount: %1$s ml</string>
    <string name="note_template">note: %1$s</string>
    <string name="tue_feb_12">Tue, Feb 12</string>
    <string name="ml">ml</string>
    <string name="all">All</string>


</resources>