<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.inapp.InappFragment">

    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/btn_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imgInApp"
        android:layout_width="200dp"
        android:layout_height="220dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/img_inapp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/get_premium"
        android:textAppearance="@style/titles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgInApp" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/share_the_care"
        android:textAppearance="@style/symptoms_name"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/all_in_one_baby_tracker"
        android:textAppearance="@style/symptoms_name"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/watch_your_baby_s_growth"
        android:textAppearance="@style/symptoms_name"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/tv2" />

    <ImageView
        android:id="@+id/img_matter1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_matter"
        app:layout_constraintBottom_toBottomOf="@id/tv1"
        app:layout_constraintEnd_toStartOf="@id/tv1"
        app:layout_constraintTop_toTopOf="@id/tv1" />

    <ImageView
        android:id="@+id/img_matter2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_matter"
        app:layout_constraintBottom_toBottomOf="@id/tv2"
        app:layout_constraintEnd_toStartOf="@id/tv2"
        app:layout_constraintTop_toTopOf="@id/tv2" />

    <ImageView
        android:id="@+id/img_matter3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_matter"
        app:layout_constraintBottom_toBottomOf="@id/tv3"
        app:layout_constraintEnd_toStartOf="@id/tv3"
        app:layout_constraintTop_toTopOf="@id/tv3" />

    <View
        android:id="@+id/Annual"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/rectangle_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv3"/>

    <TextView
        android:id="@+id/tvAnnual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/Annual"
        app:layout_constraintTop_toTopOf="@id/Annual"
        app:layout_constraintBottom_toBottomOf="@id/Annual"
        android:text="@string/annual"
        android:layout_marginStart="24dp"
        android:textAppearance="@style/annual"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/Annual"
        app:layout_constraintTop_toTopOf="@id/Annual"
        app:layout_constraintBottom_toBottomOf="@id/Annual"
        android:text="@string/_30"
        android:layout_marginEnd="24dp"
        android:textAppearance="@style/annual"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/Annual"
        android:layout_marginTop="60dp"
        android:text="@string/start"
        android:textSize="20sp"
        android:background="@drawable/rectangle_4"
        app:backgroundTint="@null"/>

    <View
        android:id="@+id/divider"
        android:layout_width="5dp"
        android:layout_height="30dp"
        android:layout_marginTop="36dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toStartOf="@+id/divider2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStart"
        />

    <View
        android:id="@+id/divider2"
        android:layout_width="5dp"
        android:layout_height="30dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toTopOf="@+id/divider" />

    <TextView
        android:id="@+id/tvPrivacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/divider"
        android:text="@string/privacy_policy_innapp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintEnd_toStartOf="@id/divider"
        app:layout_constraintBottom_toBottomOf="@id/divider"
        android:textAppearance="@style/privacy"/>

    <TextView
        android:id="@+id/tvRestore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/divider"
        android:text="@string/restore_purchase_inapp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintEnd_toStartOf="@id/divider2"
        app:layout_constraintStart_toEndOf="@id/divider"
        app:layout_constraintBottom_toBottomOf="@id/divider"
        android:textAppearance="@style/privacy"/>

    <TextView
        android:id="@+id/tvTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/divider"
        android:text="@string/terms_of_use_inapp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintStart_toEndOf="@id/divider2"
        app:layout_constraintBottom_toBottomOf="@id/divider"
        android:textAppearance="@style/privacy"/>


</androidx.constraintlayout.widget.ConstraintLayout>