<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.symptoms.symptomsdetail.SymptomsDetailFragment">


    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSymptomsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/symptoms"
        android:textAppearance="@style/titles"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnBack" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSymptoms"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btnSaveFeeding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSymptomsTitle" />

    <Button
        android:id="@+id/btnSaveFeeding"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rectangle_2"
        android:text="@string/save"
        android:textAppearance="@style/save"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/vLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#825E5E5E"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_loading"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSaved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saved"
        android:textAppearance="@style/saved"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>