<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/btnSettings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/btn_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textAppearance="@style/home"
        app:layout_constraintBottom_toBottomOf="@+id/btnSettings"
        app:layout_constraintEnd_toStartOf="@id/btnCalender"
        app:layout_constraintStart_toEndOf="@+id/btnSettings" />

    <ImageView
        android:id="@+id/btnCalender"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/btn_calender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/btnFeeding"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/img_purple"
        app:layout_constraintEnd_toEndOf="@+id/btnCalender"
        app:layout_constraintStart_toStartOf="@id/btnSettings"
        app:layout_constraintTop_toBottomOf="@+id/btnSettings" />

    <ImageView
        android:id="@+id/imgFeeding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/img_feeding"
        app:layout_constraintBottom_toBottomOf="@id/btnFeeding"
        app:layout_constraintStart_toStartOf="@id/btnFeeding"
        app:layout_constraintTop_toTopOf="@id/btnFeeding" />

    <TextView
        android:id="@+id/tvFeeding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/feeding"
        android:textAppearance="@style/home_titles"
        app:layout_constraintBottom_toBottomOf="@id/btnFeeding"
        app:layout_constraintStart_toEndOf="@+id/imgFeeding"
        app:layout_constraintTop_toTopOf="@id/btnFeeding" />

    <View
        android:id="@+id/btnSleep"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/img_blue"
        app:layout_constraintEnd_toEndOf="@+id/btnCalender"
        app:layout_constraintStart_toStartOf="@id/btnSettings"
        app:layout_constraintTop_toBottomOf="@+id/btnFeeding" />

    <ImageView
        android:id="@+id/imgSleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/img_sleep"
        app:layout_constraintBottom_toBottomOf="@id/btnSleep"
        app:layout_constraintStart_toStartOf="@id/btnSleep"
        app:layout_constraintTop_toTopOf="@id/btnSleep" />

    <TextView
        android:id="@+id/tvSleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/sleep"
        android:textAppearance="@style/home_titles"
        app:layout_constraintBottom_toBottomOf="@id/btnSleep"
        app:layout_constraintStart_toEndOf="@+id/imgSleep"
        app:layout_constraintTop_toTopOf="@id/btnSleep" />

    <View
        android:id="@+id/btnSymptoms"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/img_orange"
        app:layout_constraintEnd_toEndOf="@+id/btnCalender"
        app:layout_constraintStart_toStartOf="@id/btnSettings"
        app:layout_constraintTop_toBottomOf="@+id/btnSleep" />

    <ImageView
        android:id="@+id/imgSymptoms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/img_symptons"
        app:layout_constraintBottom_toBottomOf="@id/btnSymptoms"
        app:layout_constraintStart_toStartOf="@id/btnSymptoms"
        app:layout_constraintTop_toTopOf="@id/btnSymptoms" />

    <TextView
        android:id="@+id/tvSymptoms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/symptoms"
        android:textAppearance="@style/home_titles"
        app:layout_constraintBottom_toBottomOf="@id/btnSymptoms"
        app:layout_constraintStart_toEndOf="@+id/imgSymptoms"
        app:layout_constraintTop_toTopOf="@id/btnSymptoms" />


</androidx.constraintlayout.widget.ConstraintLayout>