<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.feeding.FeedingFragment">


    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="58dp"
        android:src="@drawable/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFeeding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feeding"
        android:textAppearance="@style/titles"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnBack" />

    <View
        android:id="@+id/vTime"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rectangle_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFeeding" />

    <TextView
        android:id="@+id/tvFeedingTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="20dp"
        android:background="@null"
        android:hint="Time"
        android:text=""
        android:textAppearance="@style/input"
        app:layout_constraintBottom_toBottomOf="@id/vTime"
        app:layout_constraintEnd_toEndOf="@id/vTime"
        app:layout_constraintStart_toStartOf="@id/vTime"
        app:layout_constraintTop_toTopOf="@+id/vTime" />

    <TimePicker
        android:id="@+id/feedingTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/vTime"
        app:layout_constraintEnd_toEndOf="@id/vTime"
        app:layout_constraintStart_toStartOf="@id/vTime"
        app:layout_constraintTop_toTopOf="@+id/vTime" />

    <View
        android:id="@+id/vAmount"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rectangle_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vTime" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="20dp"
        android:background="@null"
        android:hint="Amount (ml)"
        android:inputType="number"
        android:maxLength="6"
        android:maxLines="1"
        android:textAppearance="@style/input"
        app:layout_constraintBottom_toBottomOf="@id/vAmount"
        app:layout_constraintEnd_toEndOf="@id/vAmount"
        app:layout_constraintStart_toStartOf="@id/vAmount"
        app:layout_constraintTop_toTopOf="@+id/vAmount" />

    <View
        android:id="@+id/vNote"
        android:layout_width="0dp"
        android:layout_height="260dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rectangle_1_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vAmount" />

    <EditText
        android:id="@+id/etNote"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="20dp"
        android:background="@null"
        android:gravity="start"
        android:hint="@string/note"
        android:textAppearance="@style/input"
        app:layout_constraintBottom_toBottomOf="@id/vNote"
        app:layout_constraintEnd_toEndOf="@id/vNote"
        app:layout_constraintStart_toStartOf="@id/vNote"
        app:layout_constraintTop_toTopOf="@+id/vNote" />

    <Button
        android:visibility="gone"
        android:id="@+id/btnSaveFeeding"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="90dp"
        android:background="@drawable/rectangle_2"
        android:text="@string/save"
        android:textAppearance="@style/save"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/vLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#825E5E5E"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvSaved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saved"
        android:textAppearance="@style/saved"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>